--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,9 @@ a {
 ul li, ol li {
   list-style-type: none;
 }
+img{
+  display: block;
+}
 
 /*---------- 页面布局 ----------*/
 
@@ -60,7 +63,7 @@ ul li, ol li {
 
 .header .nav ul li a:hover {
   color: #fff;
-  background-color: #990000;
+  background-color: #bd3847;
 }
 
 .header .clear {
@@ -88,7 +91,7 @@ ul li, ol li {
 .flashnews_left {
   width: 300px;
   height: 44px;
-  background-color: #990000;
+  background-color: #bd3847;
   float: left;
   line-height: 44px;
 }
@@ -104,6 +107,8 @@ ul li, ol li {
 .flashnews_left span {
   display: block;
   margin: 0 auto;
+  width: 80px;
+  text-align: center;
 }
 
 .flashnews_right span {
@@ -116,16 +121,18 @@ ul li, ol li {
 .course {
   width: 1000px;
   height: 162px;
-  background-color: white;
+  background-color:pink ;
   margin-top: 10px;
 }
 
 .course_pic {
   width: 1000px;
-  height: 130ox;
-  background-color: #fff;
+  height: 130px;
+  background-color:#fff;
 }
-
+.pic_list{
+  overflow: hidden;
+}
 .course .course_pic .pic_list li {
   float: left;
 }
@@ -151,6 +158,7 @@ ul li, ol li {
   float: left;
   line-height: 30px;
   border: 1px solid #999;
+  text-align: center;
 }
 
 .course_title .title_list .mid_title {
@@ -162,10 +170,45 @@ ul li, ol li {
 .news {
   width: 1000px;
   height: 200px;
-  background-color: #558888;
-  margin-top: 10px;
+  background-color: #fff;
+  margin-top: 20px;
 }
 
+.news .news_list li{
+  float: left;
+}
+
+.news_left, .news_mid, .news_right{
+  width: 330px;
+  height: 200px;
+}
+
+.news_left{
+  background-color: yellow;
+}
+.news ul li .news_top{
+  color: #fff;
+  width: 330px;
+  height:30px;
+  line-height: 30px;
+  background-color: #bd3847;
+}
+
+.news ul li .news_top span{
+  display: block;
+  margin-left: 20px;
+}
+.news_mid{
+  background-color: purple;
+}
+
+.news .news_list li .news_mid{
+  margin: 0 4px;
+}
+
+.news_right{
+  background-color: blue;
+}
 /*---------- copyright ----------*/
 
 .copyright {
